src/snapshots/tptp__tests__tfx_arguments.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Arguments(
    [
        Logic(
            Unitary(
                Atomic(
                    Defined(
                        DefinedAtomic(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
