src/snapshots/tptp__tests__tfx_atom_typing.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Typing(
    Constant(
        Constant(
            Functor(
                Lower(
                    LowerWord(
                        "c",
                    ),
                ),
            ),
        ),
    ),
    Atomic(
        Variable(
            Variable(
                UpperWord(
                    "A",
                ),
            ),
        ),
    ),
)
