src/snapshots/tptp__tests__tfx_atomic_formula-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Defined(
    DefinedAtomic(
        Constant(
            DefinedConstant(
                DefinedFunctor(
                    AtomicDefinedWord(
                        DollarWord(
                            LowerWord(
                                "defined",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
