src/snapshots/tptp__tests__tfx_atomic_formula-5.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
System(
    Constant(
        SystemConstant(
            SystemFunctor(
                AtomicSystemWord(
                    DollarDollarWord(
                        LowerWord(
                            "system",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
