src/snapshots/tptp__tests__tfx_atomic_formula.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Plain(
    Constant(
        Constant(
            Functor(
                Lower(
                    LowerWord(
                        "p",
                    ),
                ),
            ),
        ),
    ),
)
