src/snapshots/tptp__tests__tfx_atomic_type-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Defined(
    DefinedType(
        AtomicDefinedWord(
            DollarWord(
                LowerWord(
                    "defined_type",
                ),
            ),
        ),
    ),
)
