src/snapshots/tptp__tests__tfx_atomic_type-5.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Variable(
    Variable(
        UpperWord(
            "TypeVariable",
        ),
    ),
)
