src/snapshots/tptp__tests__tfx_atomic_type.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Constant(
    TypeConstant(
        TypeFunctor(
            Lower(
                LowerWord(
                    "type_constant",
                ),
            ),
        ),
    ),
)
